# growi

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_JP.md  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: chatty-mayflies-own.md  cyan-pants-hear.md  eight-zebras-design.md  fix-mongo-regex-fullwidth-space.md  memory-leak-investigation-fixes.md  news-feed-reserved-path.md  pink-geese-grab.md  quick-groups-user-group-scope.md  rename-ai-access-token-scope.md  shy-mice-give.md
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/commands/: invest-issue.md  investigate-issue.md  learn.md  tdd.md
.claude/commands/kiro/: spec-cleanup.md
.claude/hooks/: session-start.sh
.claude/release-notes/: growi-core-2.3.2.md  growi-pluginkit-1.2.5.md  v7.5.6.md
.claude/rules/: coding-style.md  devcontainer.md  github-cli.md  lsp.md  model.md  mongodb-regex.md  performance.md  project-structure.md  security.md  testing.md
.claude/skills/essential-test-design/: SKILL.md
.claude/skills/essential-test-patterns/: SKILL.md
.claude/skills/growi-monorepo-overview/: SKILL.md
.claude/skills/growi-tech-stack/: SKILL.md
.claude/skills/growi-testing-patterns/: SKILL.md
.claude/skills/investigate-issue/: SKILL.md
.claude/skills/kiro-spec-cleanup/: SKILL.md
.claude/skills/learned/: .gitkeep
.claude/skills/mongoose-to-prisma/: SKILL.md
.claude/skills/monorepo-overview/: SKILL.md
.claude/skills/suggest-path-evaluator/: SKILL.md
.claude/skills/tailwind-to-bootstrap/: SKILL.md
.claude/skills/tech-stack/: SKILL.md
.claude/skills/testing-patterns-with-vitest/: SKILL.md
.devcontainer/: compose.extend.template.yml  compose.yml
.devcontainer/app/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.devcontainer/app/postCreateCommand/: ensure-mongo-fcv.ts  main.sh
.devcontainer/pdf-converter/: devcontainer.json  postCreateCommand.sh
.devcontainer/scripts/: init-home.sh
.github/: dependabot.yml  mergify.yml
.github/scripts/: start-mongodb-replset.sh
.github/workflows/: ci-app-prod.yml  ci-app.yml  ci-bin.yml  ci-pdf-converter.yml  ci-slackbot-proxy.yml  ci-vault.yml  list-unhealthy-branches.yml  release-pdf-converter.yml  release-rc-scheduled.yml  release-rc.yml  release-slackbot-proxy.yml  release-subpackages.yml  release-vault.yml  release.yml  reusable-app-build-image.yml  reusable-app-create-manifests.yml  reusable-app-prod.yml  update-release-translation.yml  vault-integ.yml
.kiro/specs/access-control/: roadmap.md
.kiro/specs/access-token-parser/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/account-scope-roles/: brief.md
.kiro/specs/activities-prisma-migration/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/activity-log/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/activity-log-snapshot/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/activity-log-snapshot-viewer/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/admin-ai-settings/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  roadmap.md  search-filters.md  structure.md  tdd.md  tech.md
.serena/: project.yml
.serena/memories/: apps-app-development-patterns.md  apps-app-google-workspace-oauth2-mail.md  apps-app-page-path-nav-and-sub-navigation-layering.md  apps-app-simplified-items-tree-virtualization-plan.md  coding_conventions.md  jest-to-vitest-migration-plan.md  project_structure.md  task_completion_checklist.md  tech_stack.md  vitest-testing-tips-and-best-practices.md
apps/app/: .env.development  .env.test  .eslintrc.js  .gitignore  .stylelintrc.json  AGENTS.md  CLAUDE.md  components.json  initial-modules-analysis.md  next.config.js  next.config.prod.cjs  next.config.prod.mjs  next.config.ts  nodemon.json  package.json  playwright.config.ts  prisma.config.ts  run-news-cron.mts  tailwind.config.js  tsconfig.build.client.json  tsconfig.build.server.json  tsconfig.json  turbo.json  vite.vendor-styles-components.ts  vitest.workspace.mts
apps/growi-vault-manager/: .env.development  .gitignore  .swcrc  Dockerfile  README.md  docker-compose.integ.yml  package.json  turbo.json  vitest.config.ts
apps/pdf-converter/: package.json  tsconfig.json
apps/slackbot-proxy/: package.json  tsconfig.build.json  tsconfig.json
docs/: memory-leak-investigation.md
docs/183966-suggest-path-keyword-eval/: 183966-keyword-eval-fullprompt-followup.md  183966-keyword-eval-fullprompt-result.md  183966-keyword-extraction-verification.md
docs/183968-devcontainer-instructions/: A-import-fix-verify.md  C-import-dev-wiki-and-verify-result.md  C-import-dev-wiki-and-verify.md  D-suggestpath-remeasure-result.md  D-suggestpath-remeasure.md  D2-suggestpath-raw-es-rank-result.md
infra/docker/: .env.example  compose.yaml
patches/: yjs@13.6.19.patch
services/markitdown-extractor/: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
services/markitdown-extractor/scripts/: export_openapi.py
services/markitdown-extractor/src/app/: __init__.py  config.py  limits.py  main.py  schemas.py  security.py
services/markitdown-extractor/src/app/middleware/: bearer_auth.py
services/markitdown-extractor/src/app/routers/: __init__.py  extract.py  health.py
services/markitdown-extractor/src/app/services/: extraction_service.py
services/markitdown-extractor/src/app/services/extractors/: __init__.py  simple_extractor.py
services/markitdown-extractor/tests/: conftest.py  test_bearer_auth.py  test_config.py  test_e2e_extract.py  test_export_openapi.py  test_extract_router.py  test_extract_simple.py  test_extraction_service.py  test_health.py  test_infrastructure.py  test_integration_auth.py  test_limits.py  test_main.py  test_schemas.py  test_security.py
services/markitdown-extractor/tests/fixtures/: README.md  generate_fixtures.py  sample.json  sample.txt
(+3437 files in other folders)
